; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emu_exec_call.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emu_exec_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @x86emu_exec_call(%struct.x86emu* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.x86emu*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.x86emu* %0, %struct.x86emu** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.x86emu*, %struct.x86emu** %4, align 8
  %8 = call i32 @push_word(%struct.x86emu* %7, i32 0)
  %9 = load %struct.x86emu*, %struct.x86emu** %4, align 8
  %10 = call i32 @push_word(%struct.x86emu* %9, i32 0)
  %11 = load i8*, i8** %5, align 8
  %12 = load %struct.x86emu*, %struct.x86emu** %4, align 8
  %13 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  store i8* %11, i8** %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.x86emu*, %struct.x86emu** %4, align 8
  %17 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i8* %15, i8** %18, align 8
  %19 = load %struct.x86emu*, %struct.x86emu** %4, align 8
  %20 = call i32 @x86emu_exec(%struct.x86emu* %19)
  ret void
}

declare dso_local i32 @push_word(%struct.x86emu*, i32) #1

declare dso_local i32 @x86emu_exec(%struct.x86emu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
